practica_1/jcc_files/alike.java
/* alike.java */
/* Generated By:JavaCC: Do not edit this line. alike.java */
package traductor;

//...

public class alike implements alikeConstants {
   //...

   public static void main(String[] args) {
           alike parser = null;

           try {
                   if(args.length == 0) {
                           parser = new alike(System.in);
                   }
                   else {
                           parser = new alike(new java.io.FileInputStream(args[0]));
                   }
                   //Programa es el símbolo inicial de la gramática
                   parser.Programa();
                   //...
                   System.out.println("***** An\u00e1lisis terminado con \u00e9xito *****");
           }
           catch (java.io.FileNotFoundException e) {
                   System.err.println ("Fichero " + args[0] + " no encontrado.");
           }
           catch (TokenMgrError e) {
                   System.err.println("LEX_ERROR: " + e.getMessage());
           }
           catch (ParseException e) {
                        System.err.println("PARSE_ERROR: " + e.getMessage());
           }
           //...
   }

//------------ Símbolo inicial de la gramática. Para análisis léxico no hace falta más
  static final public void Programa() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tBEGIN:{
        jj_consume_token(tBEGIN);
        break;
        }
      case tEND:{
        jj_consume_token(tEND);
        break;
        }
      case tASIGN:{
        jj_consume_token(tASIGN);
        break;
        }
      case tREF:{
        jj_consume_token(tREF);
        break;
        }
      case tIS:{
        jj_consume_token(tIS);
        break;
        }
      case tOF:{
        jj_consume_token(tOF);
        break;
        }
      case tPROC:{
        jj_consume_token(tPROC);
        break;
        }
      case tNULL:{
        jj_consume_token(tNULL);
        break;
        }
      case tRETURN:{
        jj_consume_token(tRETURN);
        break;
        }
      case tCHAR:{
        jj_consume_token(tCHAR);
        break;
        }
      case tBOOL:{
        jj_consume_token(tBOOL);
        break;
        }
      case tINT:{
        jj_consume_token(tINT);
        break;
        }
      case tCHARCONST:{
        jj_consume_token(tCHARCONST);
        break;
        }
      case tINTCONST:{
        jj_consume_token(tINTCONST);
        break;
        }
      case tBOOLCONST:{
        jj_consume_token(tBOOLCONST);
        break;
        }
      case tSTRING:{
        jj_consume_token(tSTRING);
        break;
        }
      case tPLUS:{
        jj_consume_token(tPLUS);
        break;
        }
      case tMINUS:{
        jj_consume_token(tMINUS);
        break;
        }
      case tTIMES:{
        jj_consume_token(tTIMES);
        break;
        }
      case tDIV:{
        jj_consume_token(tDIV);
        break;
        }
      case tLT:
      case tGT:
      case tEQ:
      case tNE:
      case tLE:
      case tGE:{
        comparacion();
        break;
        }
      case tMOD:{
        jj_consume_token(tMOD);
        break;
        }
      case tAPAR:{
        jj_consume_token(tAPAR);
        break;
        }
      case tCPAR:{
        jj_consume_token(tCPAR);
        break;
        }
      case tSCOL:{
        jj_consume_token(tSCOL);
        break;
        }
      case tCOL:{
        jj_consume_token(tCOL);
        break;
        }
      case tCOMA:{
        jj_consume_token(tCOMA);
        break;
        }
      case tRANGE:{
        jj_consume_token(tRANGE);
        break;
        }
      case tIF:{
        jj_consume_token(tIF);
        break;
        }
      case tELSE:{
        jj_consume_token(tELSE);
        break;
        }
      case tELSIF:{
        jj_consume_token(tELSIF);
        break;
        }
      case tTHEN:{
        jj_consume_token(tTHEN);
        break;
        }
      case tWHILE:{
        jj_consume_token(tWHILE);
        break;
        }
      case tLOOP:{
        jj_consume_token(tLOOP);
        break;
        }
      case tIDENTIFIER:{
        jj_consume_token(tIDENTIFIER);
        break;
        }
      case tSKIPLINE:
      case tGET:
      case tPUTLINE:
      case tPUT:
      case tINT2CHAR:
      case tCHAR2INT:{
        builtin_function();
        break;
        }
      case tRESTO:{
        jj_consume_token(tRESTO);
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tBEGIN:
      case tEND:
      case tASIGN:
      case tREF:
      case tIS:
      case tOF:
      case tPROC:
      case tNULL:
      case tRETURN:
      case tCHAR:
      case tBOOL:
      case tINT:
      case tCHARCONST:
      case tINTCONST:
      case tBOOLCONST:
      case tSTRING:
      case tPLUS:
      case tMINUS:
      case tTIMES:
      case tDIV:
      case tLT:
      case tGT:
      case tEQ:
      case tNE:
      case tLE:
      case tGE:
      case tMOD:
      case tAPAR:
      case tCPAR:
      case tSCOL:
      case tCOL:
      case tCOMA:
      case tRANGE:
      case tSKIPLINE:
      case tGET:
      case tPUTLINE:
      case tPUT:
      case tINT2CHAR:
      case tCHAR2INT:
      case tIF:
      case tELSE:
      case tELSIF:
      case tTHEN:
      case tWHILE:
      case tLOOP:
      case tIDENTIFIER:
      case tRESTO:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(0);
}

  static final public void tipo_dato() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tCHAR:{
      jj_consume_token(tCHAR);
      break;
      }
    case tBOOL:{
      jj_consume_token(tBOOL);
      break;
      }
    case tINT:{
      jj_consume_token(tINT);
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void tipo_constante() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tCHARCONST:{
      jj_consume_token(tCHARCONST);
      break;
      }
    case tINTCONST:{
      jj_consume_token(tINTCONST);
      break;
      }
    case tBOOLCONST:{
      jj_consume_token(tBOOLCONST);
      break;
      }
    case tSTRING:{
      jj_consume_token(tSTRING);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void operador() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tPLUS:{
      jj_consume_token(tPLUS);
      break;
      }
    case tMINUS:{
      jj_consume_token(tMINUS);
      break;
      }
    case tTIMES:{
      jj_consume_token(tTIMES);
      break;
      }
    case tDIV:{
      jj_consume_token(tDIV);
      break;
      }
    case tMOD:{
      jj_consume_token(tMOD);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void comparacion() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tLT:{
      jj_consume_token(tLT);
      break;
      }
    case tGT:{
      jj_consume_token(tGT);
      break;
      }
    case tEQ:{
      jj_consume_token(tEQ);
      break;
      }
    case tNE:{
      jj_consume_token(tNE);
      break;
      }
    case tLE:{
      jj_consume_token(tLE);
      break;
      }
    case tGE:{
      jj_consume_token(tGE);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void builtin_function() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tSKIPLINE:{
      jj_consume_token(tSKIPLINE);
      break;
      }
    case tGET:{
      jj_consume_token(tGET);
      break;
      }
    case tPUT:{
      jj_consume_token(tPUT);
      break;
      }
    case tPUTLINE:{
      jj_consume_token(tPUTLINE);
      break;
      }
    case tINT2CHAR:{
      jj_consume_token(tINT2CHAR);
      break;
      }
    case tCHAR2INT:{
      jj_consume_token(tCHAR2INT);
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public alikeTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[7];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0xfffffe00,0xfffffe00,0x1c0000,0x1e00000,0x1e000000,0xe0000000,0x0,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0xffffff,0xffffff,0x0,0x0,0x8,0x7,0xfc00,};
	}

  /** Constructor with InputStream. */
  public alike(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public alike(java.io.InputStream stream, String encoding) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser.  ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new alikeTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public alike(java.io.Reader stream) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new alikeTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new alikeTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public alike(alikeTokenManager tm) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(alikeTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 7; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  static private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[56];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 7; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		   if ((jj_la1_1[i] & (1<<j)) != 0) {
			 la1tokens[32+j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 56; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  static private boolean trace_enabled;

/** Trace enabled. */
  static final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
